# ESP32_IoT_Logger

./: CMakeLists.txt  README.md  main.c
inc/: Logger.h  MqttClient.h  SensorReader.h  WifiManager.h
src/: Logger.c  MqttClient.c  SensorReader.c  WiFiManager.c
utils/: SensorReader.c  SensorReader.h  WiFiManager.c  WifiManager.h
